sfSandBoxCode/force-app/main/default/objects/SA_Presentations__c/SA_Presentations__c.object-meta.xml
<CustomObject>
    <description>Used to create leads and track presentations made by FL Sales Associates.</description>
    <label>SA Presentation</label>
    <nameField>
        <label>Presentations Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>SA Presentations</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>