sfSandBoxCode/force-app/main/default/objects/SA_Presentations__c/fields/Deposit_Prediction__c.field-meta.xml
<CustomField>
    <fullName>Deposit_Prediction__c</fullName>
    <label>Deposit Prediction</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
            <value>
                <fullName>I&#39;m not sure</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>