sfSandBoxCode/force-app/main/default/objects/SA_Presentations__c/fields/First_Contact_Date__c.field-meta.xml
<CustomField>
    <fullName>First_Contact_Date__c</fullName>
    <label>First Presentation Date</label>
    <type>Date</type>
</CustomField>