sfSandBoxCode/force-app/main/default/objects/SA_Presentations__c/fields/GPS_Latitude__c.field-meta.xml
<CustomField>
    <fullName>GPS_Latitude__c</fullName>
    <label>GPS Latitude</label>
    <scale>8</scale>
    <type>Location</type>
</CustomField>