sfSandBoxCode/force-app/main/default/objects/SA_Presentations__c/fields/GPS_Longitude__c.field-meta.xml
<CustomField>
    <fullName>GPS_Longitude__c</fullName>
    <label>GPS Longitude</label>
    <scale>8</scale>
    <type>Location</type>
</CustomField>