sfSandBoxCode/force-app/main/default/objects/SA_Presentations__c/fields/Height_of_space__c.field-meta.xml
<CustomField>
    <fullName>Height_of_space__c</fullName>
    <label>Height of space</label>
    <precision>6</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>