sfSandBoxCode/force-app/main/default/objects/SA_Presentations__c/fields/Lead_Source__c.field-meta.xml
<CustomField>
    <fullName>Lead_Source__c</fullName>
    <label>Lead Source</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Hotspot</fullName>
                <default>true</default>
                <label>Hotspot</label>
            </value>
            <value>
                <fullName>Group</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
            <value>
                <fullName>Event</fullName>
            </value>
            <value>
                <fullName>Call Center</fullName>
            </value>
            <value>
                <fullName>Salesperson personal network</fullName>
            </value>
            <value>
                <fullName>Farm Star marketing event</fullName>
            </value>
            <value>
                <fullName>Other agricultural event</fullName>
            </value>
            <value>
                <fullName>Farm Star marketing materials</fullName>
            </value>
            <value>
                <fullName>Cold call</fullName>
            </value>
            <value>
                <fullName>Media spotlight</fullName>
            </value>
            <value>
                <fullName>Referral - Existing Customer</fullName>
            </value>
            <value>
                <fullName>Referral - Sanergy team</fullName>
            </value>
            <value>
                <fullName>Referral - Other</fullName>
            </value>
            <value>
                <fullName>Field Officer</fullName>
            </value>
            <value>
                <fullName>Sales activation activity</fullName>
            </value>
            <value>
                <fullName>Referral from chief / chairperson</fullName>
            </value>
            <value>
                <fullName>Referral from existing FLO</fullName>
            </value>
            <value>
                <fullName>Referral from other</fullName>
            </value>
            <value>
                <fullName>Agency</fullName>
            </value>
            <value>
                <fullName>Tupperware Party</fullName>
            </value>
            <value>
                <fullName>Community forum</fullName>
            </value>
            <value>
                <fullName>Market storming</fullName>
            </value>
            <value>
                <fullName>Add-on</fullName>
            </value>
            <value>
                <fullName>Lead reached out to us</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>