sfSandBoxCode/force-app/main/default/objects/SA_Presentations__c/fields/Name_of_Referrer__c.field-meta.xml
<CustomField>
    <fullName>Name_of_Referrer__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Name of Referrer</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>SA Presentations (Name of Referrer)</relationshipLabel>
    <relationshipName>Name_of_Referrer</relationshipName>
    <type>Lookup</type>
</CustomField>