sfSandBoxCode/force-app/main/default/objects/SA_Presentations__c/fields/Pre_Application__c.field-meta.xml
<CustomField>
    <fullName>Pre_Application__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Pre Application</label>
    <type>Checkbox</type>
</CustomField>