sfSandBoxCode/force-app/main/default/objects/SA_Presentations__c/fields/Presentations_Count__c.field-meta.xml
<CustomField>
    <fullName>Presentations_Count__c</fullName>
    <formula>1</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Presentations Count</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>