sfSandBoxCode/force-app/main/default/objects/SA_Presentations__c/fields/Presented_to__c.field-meta.xml
<CustomField>
    <fullName>Presented_to__c</fullName>
    <label>Presented to:</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Caretaker</fullName>
            </value>
            <value>
                <fullName>Agent</fullName>
            </value>
            <value>
                <fullName>Commercial Not Renting Land</fullName>
            </value>
            <value>
                <fullName>Commercial Renting Land</fullName>
            </value>
            <value>
                <fullName>Head Teacher</fullName>
            </value>
            <value>
                <fullName>Landlord</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>