sfSandBoxCode/force-app/main/default/objects/SA_Presentations__c/fields/Probability_of_Closing__c.field-meta.xml
<CustomField>
    <fullName>Probability_of_Closing__c</fullName>
    <label>Probability of Closing</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Almost 0 percent</fullName>
            </value>
            <value>
                <fullName>25 percent</fullName>
            </value>
            <value>
                <fullName>50 percent</fullName>
            </value>
            <value>
                <fullName>75 percent</fullName>
            </value>
            <value>
                <fullName>Almost 100 percent</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>