sfSandBoxCode/force-app/main/default/objects/SA_Presentations__c/fields/Qualified_Presentation__c.field-meta.xml
<CustomField>
    <fullName>Qualified_Presentation__c</fullName>
    <formula>OR(
ISPICKVAL( Presented_to__c , &quot;Landlord&quot;),
ISPICKVAL( Presented_to__c , &quot;Commercial Renting Land&quot;),
ISPICKVAL( Presented_to__c , &quot;Head Teacher&quot;))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Qualified Presentation</label>
    <type>Checkbox</type>
</CustomField>