sfSandBoxCode/force-app/main/default/objects/SA_Presentations__c/fields/SA_Name__c.field-meta.xml
<CustomField>
    <fullName>SA_Name__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>SA Name</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>SA Presentations</relationshipLabel>
    <relationshipName>SA_Presentations</relationshipName>
    <type>Lookup</type>
</CustomField>