sfSandBoxCode/force-app/main/default/objects/SA_Presentations__c/fields/Sub_Area__c.field-meta.xml
<CustomField>
    <fullName>Sub_Area__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Sub-Area</label>
    <referenceTo>Sub_Area__c</referenceTo>
    <relationshipLabel>SA Presentations</relationshipLabel>
    <relationshipName>SA_Presentations</relationshipName>
    <type>Lookup</type>
</CustomField>