sfSandBoxCode/force-app/main/default/objects/SA_Presentations__c/fields/Time_created__c.field-meta.xml
<CustomField>
    <fullName>Time_created__c</fullName>
    <label>Time created</label>
    <type>DateTime</type>
</CustomField>