sfSandBoxCode/force-app/main/default/objects/SA_Presentations__c/recordTypes/SA_Presentations.recordType-meta.xml
<RecordType>
    <fullName>SA_Presentations</fullName>
    <active>true</active>
    <label>SA Presentations</label>
</RecordType>