sfSandBoxCode/force-app/main/default/objects/SA_Presentations__c/recordTypes/Sanergy_Presentation.recordType-meta.xml
<RecordType>
    <fullName>Sanergy_Presentation</fullName>
    <active>true</active>
    <label>Sanergy Presentation</label>
</RecordType>