sfSandBoxCode/force-app/main/default/objects/SA_Presentations__c/validationRules/Reject_if_Phone_Number_count_is_Not_10.validationRule-meta.xml
<ValidationRule>
    <fullName>Reject_if_Phone_Number_count_is_Not_10</fullName>
    <active>true</active>
    <errorConditionFormula>LEN(Phone__c) != 10</errorConditionFormula>
    <errorDisplayField>Phone__c</errorDisplayField>
    <errorMessage>Kindly Verify the Phone Number</errorMessage>
</ValidationRule>