sfSandBoxCode/force-app/main/default/objects/SA_Presentations__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>SA_Name__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>Lead_Source__c</columns>
    <columns>Name_of_Referrer__c</columns>
    <columns>Qualified_Presentation__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
    <language>en_US</language>
</ListView>